fix for modal visual bug when scrolling on mobiles

--- a/components/Root.module.css
+++ b/components/Root.module.css
@@ -1,10 +1,3 @@
-.root {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-}
-
 .contentWrapper {
     perspective: initial;
     display: flex;
